# solvent-effects-isotherms

./: .gitignore  LICENSE  README.md  pyproject.toml
Isotherm-Fitting/: test.py
Isotherm-Fitting/Bayesian-Isotherm-Fitting/: bayesian-fitting.py
Isotherm-Fitting/Linearized-Isotherm-Fitting-Pt/: linearized-fitting-Pt.py
Isotherm-Fitting/Nonlinear-Isotherm-Fitting/: activity_coefficient-fitting-with-Hill-parameter.py  activity_coefficient-fitting.py
