[project]
name = "solvent-effects-isotherms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "corner>=2.2.3",
    "emcee>=3.1.6",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
]
